--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+<!--
+		&lt;!&ndash; https://mvnrepository.com/artifact/org.mockito/mockito-all &ndash;&gt;
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+-->
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
