--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/number-generator
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:h2:./exemple;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=u
+spring.datasource.password=1
+spring.liquibase.enabled=true
