--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:h2:./exemple;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=u
 spring.datasource.password=1
